fix somewhat